<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/widget"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cd_home_crest"
                    android:id="@+id/home_crest"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/TeamNames"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:contentDescription="@string/cd_home_name"
                    android:id="@+id/home_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/test_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/Score"
                    android:contentDescription="@string/cd_score_textview"
                    android:id="@+id/score_textview"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/test_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:contentDescription="@string/cd_data_textview"
                    android:id="@+id/data_textview"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cd_away_crest"
                    android:id="@+id/away_crest"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:textSize="@dimen/TeamNames"
                    android:contentDescription="@string/cd_away_name"
                    android:id="@+id/away_name"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout >